        Enum FileFormat:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., REGINA_XML_GEN_3) have been
              renamed as scoped enum values (e.g., FileFormat::XmlGen3).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class Flags<T>:
            - New operator bool(), which tests for a non-empty flag set.
        Enum Framing:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., FRAMING_SEIFERT) have been
              renamed as scoped enum values (e.g., Framing::Seifert).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class HomologicalData:
            - New routine triangulation().
        Enum HyperCoords:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., HS_STANDARD) have been
              renamed as scoped enum values (e.g., HyperCoords::Standard).
              The old names have been kept as compile-time constants in the
              regina:: namespace (and are _not_ deprecated for the time being).
        Class Integer:
            - New routine hash(), which hashes the integer down to a size_t.
            - New routine str(), which is an alias for stringValue().
            - New class constant supportsInfinity, which is set to false.
        Class IntOfBits<k>:
            - New type alias to simplify arithmetic when using IntOfSize<...>.
        Class Isomorphism<dim>:
            - New routine hash(), which uses the tight encoding.
        Enum Language:
            - New enumeration that describes supported programming languages.
        Class LargeInteger:
            - New routine hash(), which hashes the integer down to a size_t.